2016/09/13 v124
	1. All player's buff would be shown on the raidpanel, you can right-click to send them to black list, just like the debuffs.

2016/09/09 v123
	1. The Beacon of Faith would be shown in the raid panel.

2016/09/06 v122
	1. An alert icon would be shown if the quest item has unknown appearance.

2016/09/04 v121
	1. Use a new GameTooltip to avoid hooking slow down the item's scan.

2016/09/02 v120
	1. Bless of paladin would be shown in the raid panel.

2016/09/01 v119
	1. The Beacon of Light would be shown in raid panel.

2016/09/01 v118
	1. Hide the artifact bar, use the info bar to display the artifact power.

2016/08/30 v116
	1. The container view system would load the container with a delay for each one, so it won't lag when you open it for the first time.
	2. A default container view is added, you can't modify it, and it will loaded when you entering the game, so you can still use items when you entering the game in combat.

2016/08/29 v115
	1. Replace the icon of group roles.

2016/08/28 v114
	1. 'Use Debuff color' & 'Use Smoothing Color' is added to raid panel's menu.
	2. Fix the totembar, totem can be canceled.

2016/08/28 v113
	1. Re-design the layout of the unitframes, the data is cleared.
	2. Fix the lag when sort container, need new igas lib.

2016/08/27 v112
	1. Add IsBindOnEquip(UnBind) rule for container view sytem.

2016/08/24 v111
	1. Add info for aura icons on unitframes.

2016/08/24 v108
	1.soul-fragments is added for demon-hunter as class power.

2016/08/24 v107
	1. Fix player can't enter the game with too many container views.

2016/08/24 v106
	1. Fix the lag when sort items in the bank and container.

2016/08/24 v105
	1. Change the equip set would update the container view.

2016/08/24 v104
	1. Fix the cooldown size of the action buttons.

2016/08/24 v103
	1. 'IsUnknownAppearance' rule added for container view to only show the items with unknow appearance that can be added to your wardrobe.

2016/08/23 v102